--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Viaggio a Londra</title>
 </head>
 <body>
-  
+  <!-- Header -->
+  <header>
+    <h1>Il mio Viaggio a Londra</h1>
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="Prima parte dell'immagine di copertina">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Prima parte dell'immagine di copertina">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Prima parte dell'immagine di copertina">
+    <hr>
+  </header>
+  <!-- Fine Header -->
 </body>
 </html>
