--- a/index.html
+++ b/index.html
@@ -16,5 +16,48 @@
     <hr>
   </header>
   <!-- Fine Header -->
+
+  <!-- Corpo principale -->
+  <main>
+    <!-- Sezione spese -->
+    <section>
+      <h2>Le mie spese</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="2">Totale</td>
+            <td>360€</td>
+          </tr>
+        </tfoot>
+      </table>
+      <hr>
+    </section>
+    <!-- Fine Sezione spese -->
+  </main>
+  <!-- Fine Corpo principale -->
 </body>
 </html>
