--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
       <hr>
     </section>
     <!-- Fine Sezione spese -->
+    
+    <!-- Sezione Attività -->
+    <section>
+      <h3>Cose da fare</h3>
+      <ul>
+        <li>Visitare la Tower of London &#10008;</li>
+        <li>Visitare Greenwich &#10004;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10004;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
+      </ul>
+      <hr>
+    </section>
+    <!-- Fine Sezione attività -->
   </main>
   <!-- Fine Corpo principale -->
 </body>
