--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <!-- Header -->
   <header>
     <h1>Il mio Viaggio a Londra</h1>
-    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="Immagine di copertina frammentata 1/3, London Eye">
-    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Immagine di copertina frammentata 2/3, Tamigi e Ponte di Westminster">
-    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Immagine di copertina frammentata 3/3, Big Ben e Palazzo di Westminster">
+    <img src="img/pexels-bill-emrich-230794-0.jpg"
+      alt="Immagine di copertina frammentata 1/3, London Eye">
+    <img src="img/pexels-bill-emrich-230794-1.jpg"
+      alt="Immagine di copertina frammentata 2/3, Tamigi e Ponte di Westminster">
+    <img src="img/pexels-bill-emrich-230794-2.jpg"
+      alt="Immagine di copertina frammentata 3/3, Big Ben e Palazzo di Westminster">
     <hr>
   </header>
   <!-- Fine Header -->
@@ -100,18 +103,18 @@
       <hr>
     </section>
     <!-- Fine Sezione info -->
+
+    <!-- Sezione foto -->
+    <section>
+      <h3>Le foto</h3>
+      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+        alt="Foto del Millennium Bridge e della cupola della Cattedrale di San Paolo">
+      <img src="https://ak-d.tripcdn.com/images/1i65l4224sybk8zaa639E_R_400_10000_R5_Q100.jpg"
+        alt="Foto di Trafalgar Square">
+    </section>
+    <!-- Fine Sezione foto -->
   </main>
   <!-- Fine Corpo principale -->
-
-  <!-- Footer -->
-  <footer>
-    <h3>Le foto</h3>
-    <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
-      alt="Foto del Millennium Bridge e della cupola della Cattedrale di San Paolo">
-    <img src="https://ak-d.tripcdn.com/images/1i65l4224sybk8zaa639E_R_400_10000_R5_Q100.jpg"
-      alt="Foto di Trafalgar Square">
-  </footer>
-  <!-- Fine Footer -->
 </body>
 
 </html>
