--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <section>
       <h3>Cose da fare</h3>
       <ul>
-        <li>Visitare la Tower of London &#10008;</li>
-        <li>Visitare Greenwich &#10004;</li>
-        <li>Ascoltare un artista di strada a Covent Garden &#10004;</li>
-        <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
+        <li>Visitare la Tower of London <span class="to-do">&#10008;</span></li>
+        <li>Visitare Greenwich <span class="done">&#10004;</span></li>
+        <li>Ascoltare un artista di strada a Covent Garden <span class="done">&#10004;</span></li>
+        <li>Mangiare il tipico Fish and Chips inglese <span class="to-do">&#10008;</span></li>
       </ul>
       <hr>
     </section>
